src/styles/global.css
@import '~antd/dist/antd.dark.css';
:root {
  --background-body: #fff;
  --background: #efefef;
  --animation-duration: 0.1s;
  --button-hover: #000;
  --scrollbar-thumb: rgb(213, 213, 213);
  --scrollbar-thumb-hover: rgb(196, 196, 196);
  --form-placeholder: #949494;
  --form-text: #000;
}
.write-T {
  stroke-dasharray: 300;
  stroke-dashoffset: 300;
  animation: dash 0.75s 1s linear forwards;
}

.write-Y {
  stroke-dasharray: 300;
  stroke-dashoffset: 300;
  animation: dash 0.75s 1.25s linear forwards;
}

.write-L1 {
  stroke-dasharray: 300;
  stroke-dashoffset: 300;
  animation: dash 0.75s 1.5s linear forwards;
}

.write-E1 {
  stroke-dasharray: 300;
  stroke-dashoffset: 300;
  animation: dash 0.75s 1.75s linear forwards;
}

.write-R {
  stroke-dasharray: 300;
  stroke-dashoffset: 300;
  animation: dash 0.75s 2s linear forwards;
}

.write-C {
  stroke-dasharray: 300;
  stroke-dashoffset: 300;
  animation: dash 0.75s 2.25s linear forwards;
}

.write-A {
  stroke-dasharray: 300;
  stroke-dashoffset: 300;
  animation: dash 0.75s 2.5s linear forwards;
}

.write-M {
  stroke-dasharray: 300;
  stroke-dashoffset: 300;
  animation: dash 0.75s 2.75s linear forwards;
}

.write-P {
  stroke-dasharray: 300;
  stroke-dashoffset: 300;
  animation: dash 0.75s 3s linear forwards;
}

.write-B {
  stroke-dasharray: 300;
  stroke-dashoffset: 300;
  animation: dash 0.75s 3.25s linear forwards;
}

.write-E2 {
  stroke-dasharray: 300;
  stroke-dashoffset: 300;
  animation: dash 0.75s 3.5s linear forwards;
}

.write-L2 {
  stroke-dasharray: 300;
  stroke-dashoffset: 300;
  animation: dash 0.75s 3.75s linear forwards;
}

.write-L3 {
  stroke-dasharray: 300;
  stroke-dashoffset: 300;
  animation: dash 0.75s 4s linear forwards;
}

@keyframes dash {
  to {
    stroke-dashoffset: 0;
  }
}
button,
input,
textarea {
  transition: background-color var(--animation-duration) linear,
    border-color var(--animation-duration) linear,
    color var(--animation-duration) linear,
    box-shadow var(--animation-duration) linear,
    transform var(--animation-duration) ease;
}

button,
select,
input[type="submit"],
input[type="button"],
input[type="checkbox"],
input[type="range"],
input[type="radio"] {
  cursor: pointer;
}

input:not([type="checkbox"]):not([type="radio"]),
select {
  display: block;
}

input,
button,
textarea,
select {
  color: var(--form-text);
  background-color: var(--background);

  font-family: inherit;
  font-size: inherit;

  margin-right: 6px;
  margin-bottom: 6px;
  padding: 10px;

  border: none;
  border-radius: 6px;
  outline: none;
}

input,
select,
button,
textarea {
  -webkit-appearance: none;
}

textarea {
  margin-right: 0;
  width: 100%;
  box-sizing: border-box;
  resize: vertical;
}

input:focus,
select:focus,
button:focus,
textarea:focus {
  box-shadow: 0 0 0 2px var(--focus);
}

::-moz-selection {
  background-color: var(--selection);
}

::selection {
  background-color: var(--selection);
}

